Complete remaining Phase 4 work: checker, recipes, and integration tests
EffectCompositionChecker (hkj-checker):
- Proper error reporting via trees.printMessage() (was System.err)
- boundTo() arity validation with Ops-class heuristic
- Behavioral tests using compile-testing: correct usage for non-Interpreters
  combine(), non-Ops boundTo(), and class hierarchy verification

OpenRewrite recipes (hkj-openrewrite):
- AddHandleErrorCaseRecipe: marks Free switch expressions missing HandleError/Ap
  cases with TODO comments via TextComment insertion
- ConvertRawFreeToFreePathRecipe: marks Free.liftF/suspend calls with TODO
  comments suggesting migration to FreePath API or generated Ops
- DetectInjectBoilerplateRecipe: marks InjectInstances.injectLeft/Right/RightThen
  calls with TODO suggesting @ComposeEffects generated Support class
- Tests for all 3 recipes verifying no-op on non-matching code

EffectAlgebra integration test (hkj-processor):
- 9 tests verifying end-to-end generation for 3-permit algebra (LogOp)
- Validates all 5 artifacts generated with correct structure
- Tests multi-param record forwarding in Ops factory methods
- Tests Bound inner class methods for all permits
- Tests Interpreter switch dispatch for all permits
- Tests mapK vs cast-through Functor for continuation vs simple algebras

https://claude.ai/code/session_01V8Y1ZoRm83bbv2Zu2WtC4V