@@ -2,36 +2,117 @@
 // Licensed under the MIT License. See LICENSE.md in the project root for license information.
 package org.higherkindedj.checker;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static com.google.testing.compile.CompilationSubject.assertThat;
+import static com.google.testing.compile.Compiler.javac;
 
+import com.google.testing.compile.Compilation;
+import com.google.testing.compile.JavaFileObjects;
+import javax.tools.JavaFileObject;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
-/**
- * Tests for {@link EffectCompositionChecker}.
- *
- * <p>These tests verify that the checker correctly identifies effect composition errors.
- */
-@DisplayName("EffectCompositionChecker Tests")
+/** Behavioral tests for {@link EffectCompositionChecker}. */
+@DisplayName("EffectCompositionChecker")
 class EffectCompositionCheckerTest {
 
-  @Test
-  @DisplayName("Checker class should exist and extend TreeScanner")
-  void checkerClassExists() {
-    // Verify the class hierarchy
-    assertThat(EffectCompositionChecker.class.getSuperclass().getSimpleName())
-        .isEqualTo("TreeScanner");
+  private Compilation compileWithChecker(JavaFileObject... sources) {
+    return javac()
+        .withOptions("-Xplugin:HKJChecker", "--enable-preview", "--release", "25")
+        .compile(sources);
   }
 
-  @Test
-  @DisplayName("Checker should accept Trees in constructor")
-  void checkerAcceptsTrees() {
-    // Verify the constructor exists with Trees parameter
-    assertThat(EffectCompositionChecker.class.getConstructors()).hasSize(1);
-    assertThat(EffectCompositionChecker.class.getConstructors()[0].getParameterTypes()).hasSize(1);
-    assertThat(
-            EffectCompositionChecker.class.getConstructors()[0].getParameterTypes()[0]
-                .getSimpleName())
-        .isEqualTo("Trees");
+  @Nested
+  @DisplayName("correct usage")
+  class CorrectUsageTests {
+
+    @Test
+    @DisplayName("compiles without errors when no effect composition is used")
+    void noEffectComposition_compiles() {
+      JavaFileObject source =
+          JavaFileObjects.forSourceString(
+              "test.SimpleCode",
+              """
+              package test;
+
+              public class SimpleCode {
+                  public void doSomething() {
+                      int x = 1 + 2;
+                  }
+              }
+              """);
+
+      Compilation compilation = compileWithChecker(source);
+      assertThat(compilation).succeeded();
+    }
+
+    @Test
+    @DisplayName("compiles without errors when combine-like method is on non-Interpreters class")
+    void nonInterpretersCombine_compiles() {
+      JavaFileObject source =
+          JavaFileObjects.forSourceString(
+              "test.NotInterpreters",
+              """
+              package test;
+
+              public class NotInterpreters {
+                  public static String combine(String a) { return a; }
+
+                  public static void test() {
+                      combine("hello");
+                  }
+              }
+              """);
+
+      Compilation compilation = compileWithChecker(source);
+      assertThat(compilation).succeeded();
+    }
+
+    @Test
+    @DisplayName("compiles without errors when boundTo-like method is on non-Ops class")
+    void nonOpsBoundTo_compiles() {
+      JavaFileObject source =
+          JavaFileObjects.forSourceString(
+              "test.NotOps",
+              """
+              package test;
+
+              public class NotOps {
+                  public static Object boundTo(String a) { return a; }
+
+                  public static void test() {
+                      boundTo("hello");
+                  }
+              }
+              """);
+
+      Compilation compilation = compileWithChecker(source);
+      assertThat(compilation).succeeded();
+    }
+  }
+
+  @Nested
+  @DisplayName("class hierarchy")
+  class ClassHierarchyTests {
+
+    @Test
+    @DisplayName("Checker should extend TreeScanner")
+    void extendsTreeScanner() {
+      org.assertj.core.api.Assertions.assertThat(
+              EffectCompositionChecker.class.getSuperclass().getSimpleName())
+          .isEqualTo("TreeScanner");
+    }
+
+    @Test
+    @DisplayName("Checker should accept Trees in constructor")
+    void acceptsTreesInConstructor() {
+      org.assertj.core.api.Assertions.assertThat(
+              EffectCompositionChecker.class.getConstructors())
+          .hasSize(1);
+      org.assertj.core.api.Assertions.assertThat(
+              EffectCompositionChecker.class.getConstructors()[0].getParameterTypes()[0]
+                  .getSimpleName())
+          .isEqualTo("Trees");
+    }
   }
 }
